# scryfall-mcp

./: LICENSE  pyproject.toml
.cursor/: mcp.json
.github/workflows/: pr.yaml
src/: client.py  main.py  server.py
src/api/: cards.py  types.py
src/config/: main.py  type.py
test/integration/: test_happy_path.py
