[project]
name = "scryfall-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "niquests>=3.13.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.2",
]

[tool.uv.workspace]
members = ["scryfall-mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
